# ai_agent

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/prompts/: ai_agent.prompt.md
src/: __init__.py  agent.py  api.py  config.py  figma_api.py  formatter.py  llm.py  main.py
